<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/music_note_image_view"
            android:src="@drawable/music_note"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/title_text_view"
            android:text="@string/title_text"
            android:textSize="24sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/artist_text_view"
            android:text="@string/artist_text"
            android:textSize="24sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            android:gravity="center_horizontal"
            android:id="@+id/button_panel"
            android:orientation="horizontal">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:text="@string/less_than_symbol"/>

        <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                android:id="@+id/play_button"
                android:src="@drawable/play_button"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:text="@string/greater_than_symbol"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_label_text"
                android:textSize="24dp"/>

        <TextView
                android:id="@+id/ip_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12:34:56:78:90:8080"
                android:textSize="24dp"/>

    </LinearLayout>

</LinearLayout>
